@@ -1,4 +1,5 @@
 HEAD
+    + Suite description is now parsed again when re-running a test
     + Allow to define number of tries of a test before it passes
     + Do not warn about running machines with -reuse
     + Adding browser global option for webdriver tests
